# recalbox

./: .envrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Config.in  Dockerfile  RELEASE-NOTES.md  TESTING.md  config.js  external.mk  renovate.json
board/recalbox/: copy-recalbox-archives.sh  recalbox-patch-target.sh
ci/: generated-config.tpl  renovate.gitlab-ci.yml
configs/: recalbox-odroidgo2_defconfig  recalbox-odroidxu4_defconfig  recalbox-rg351v_defconfig  recalbox-rg353x_defconfig  recalbox-rpi1_defconfig  recalbox-rpi3_defconfig  recalbox-rpi4_64_defconfig  recalbox-rpi4_defconfig  recalbox-rpi5_64_defconfig  recalbox-rpizero2_defconfig  recalbox-rpizero2legacy_defconfig  recalbox-x86_64_defconfig
custom/: list.hash
custom/linux/: Config.in  Config.in.patch  linux.mk  linux.mk.patch
package/advancemame/: 001-do_not_install_roms_snaps_samples.patch  Config.in  advancemame.mk  directoriesCreation.sh
package/amiberry/: amiberry-9999-fix-gcc14-compilation.patch  amiberry.mk
package/amiberry33/: amiberry33.mk
package/arcade-dats/: README.md  arcade-dats.mk  arcade-flat.xslt  arcade.xslt  atomiswave.xslt  controller.py  naomi.xslt  naomi2.xslt  naomigd.xslt  neogeo64.xslt  simplify.py  supermodel.xslt  updater.py
package/beebem/: beebem.mk
package/calamares/: Config.in  calamares.mk  settings.conf
package/cargs/: Config.in  cargs.mk
package/citra-emu/: citra-emu.mk
package/creativision/: Config.in  creativision.mk
projects/recalbox-volumed/: Makefile.am  README.md  config.h  configure.ac
projects/recalbox-volumed/src/: Makefile.am  volumed.c
(+3233 files in other folders)
